--- a/family-tree-project/family-tree/package.json
+++ b/family-tree-project/family-tree/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
+    "react-collapsible": "^2.8.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
