--- a/family-tree-project/family-tree/package.json
+++ b/family-tree-project/family-tree/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-awesome-modal": "^2.0.5",
     "react-calendar": "^3.1.0",
     "react-collapsible": "^2.8.0",
     "react-datepicker": "^3.1.3",
