--- a/family-tree-project/family-tree/package.json
+++ b/family-tree-project/family-tree/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "install": "^0.13.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-awesome-modal": "^2.0.5",
     "react-calendar": "^3.1.0",
