--- a/family-tree-project/family-tree/package.json
+++ b/family-tree-project/family-tree/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-social-login-buttons": "^3.1.0",
     "react-typing-effect": "^2.0.3",
     "reactstrap": "^8.5.1"
