--- a/family-tree-project/family-tree/package.json
+++ b/family-tree-project/family-tree/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.10.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "install": "^0.13.0",
+    "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-awesome-modal": "^2.0.5",
@@ -15,6 +18,7 @@
     "react-collapsible": "^2.8.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-social-login-buttons": "^3.1.0",
